# rdwxutils

./: .clang_complete  .project.el  Makefile.am  README  configure.ac  makefile
debian/: changelog  control
redirector/: Makefile.win  redirector.dev  redirector_private.h  redirector_private.rc
src/: Makefile.am  redirector.cpp  redirector_private.h  redirectorwindow.cpp  redirectorwindow.h  viewer.cpp  viewer.h  viewer_version.h  viewerapp.cpp
test/: test-redirector.sh
